[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "glu"
version = "0.0.1"
description = "Python bindings for glu — a zero-dependency robotics middleware"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
